--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,16 +13,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.activity.SplashScreen">
+        <activity android:name=".ui.splash.SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activity.SignIn" />
-        <activity android:name=".ui.activity.main.Main" />
-        <activity android:name=".ui.activity.EditContact"></activity>
+        <activity android:name=".ui.authorization.activity.SignInActivity" />
+        <activity android:name=".ui.main.activity.MainActivity" />
     </application>
 
 </manifest>
