--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,22 +6,23 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
-        android:name=".data.db.InitDatabase"
+        android:name=".data.contentprovider.ContentResolverLib"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.splash.SplashScreenActivity">
+        <activity android:name=".ui.splash.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.authorization.activity.SignInActivity" />
-        <activity android:name=".ui.main.activity.MainActivity" />
+        <activity android:name=".ui.authorization.AuthorizationActivity" />
+        <activity android:name=".ui.main.MainActivity" />
+        <activity android:name=".ui.main.editcontact.EditContactActivity"></activity>
     </application>
 
 </manifest>
