Update: RecruitNotes, EditContactFragment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,7 @@
         </activity>
         <activity android:name=".ui.authorization.AuthorizationActivity" />
         <activity android:name=".ui.main.MainActivity" />
-        <activity android:name=".ui.main.editcontact.EditContactActivity" />
-        <activity android:name=".ui.secondary.SecondaryActivity"></activity>
+        <activity android:name=".ui.secondary.SecondaryActivity"/>
     </application>
 
 </manifest>
